# wasm-spec

interpreter/: dune  dune-project  wasm.opam
interpreter/main/: main.ml
interpreter/text/: dune  lexer.mll  parser.mly  parserprelude.ml
