(env
 (_ (flags (:standard -w +a-4-27-42-44-45 -warn-error +a-3))))
(include_subdirs unqualified)

(executable
 (name main)
 (modules main)
 (libraries bigarray wasm))

(library
 (name wasm)
 (public_name wasm)
 (wrapped (transition "This should be fixed!"))
 (modules decode encode utf8 eval eval_numeric f32 f32_convert f64 f64_convert flags float i32 i32_convert i64 i64_convert int lexer numeric_error env spectest func global instance memory table import js run script ast free operators types values arrange parse parser print error lib sexpr source valid))

(rule
 (alias  runtest)
 (action (run ../test/core/run.py --wasm `pwd`/_build/default/main.exe)))
